# 991

./: .cursorrules  .env.example  .gitignore  .vercelignore  CLAUDE.md  README.md  SECURITY_BACKLOG.md  dev.sh  docker-compose.yml  package-lock.json  package.json  tsconfig.json  vercel.json
app/: page.tsx  (+2 more)
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/.next/: trace  trace-build
backend/agents/: base_prompt.md
backend/docs/: error-system.md
backend/migrations/: 001_agent_catalog.sql  002_observation.sql  003_execution.sql  004_slack.sql  005_live_events.sql  006_variants.sql  007_screenshots.sql  008_learning.sql  009_experts_engagements.sql  010_credentials.sql  011_oauth.sql  012_users.sql  013_required_integrations.sql  014_default_model_haiku.sql  015_thinking_blocks.sql  016_orchestrator_primitives.sql  017_node_messages.sql  018_artifacts.sql  019_project_credentials_and_members.sql  020_error_category.sql  021_feedback_robustness.sql  022_tool_architecture.sql  023_knowledge_corpus.sql  024_living_descriptions.sql  025_description_threads.sql  026_binary_upload.sql  027_project_slack_channel.sql  028_hybrid_search_and_contextual_retrieval.sql  029_execution_mode_and_integration_overrides.sql  030_perf_indexes.sql  031_chat_learning.sql  031_workspace_soft_delete.sql  032_knowledge_access_log.sql  033_project_resources.sql  034_learning_watermark.sql  035_client_engagement_stage.sql  036_workspace_delete_retain_knowledge.sql  037_project_entity_kb.sql
backend/prompts/: drift_detector.md  extractor_system.md  narrator_system.md  planner_system.md
(+1078 files in other folders)
