[package]
name = "lele2-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
dotenvy = "0.15"
async-stream = "0.3"
axum = { version = "0.7", features = ["macros", "multipart"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "json", "chrono", "uuid"] }
tokio = { version = "1.40", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
toml = "0.8"
url = "2"
walkdir = "2"
aes-gcm = "0.10"
jsonwebtoken = "9"
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
slack-morphism = { version = "2.19", features = ["axum"], optional = true }

[features]
default = ["slack"]
slack = ["dep:slack-morphism"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
